--- a/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
+++ b/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
@@ -1,6 +1,11 @@
 @advert-height: 300px;
 @advert-margin-bottom: 15px;
 
+.adverts-list-component {
+  background: white;
+  border-radius: 12px;
+}
+
 .advert-container {
   z-index: 1;
   &:hover {
