--- a/projects/portal/src/app/portal/components/articles-section/articles-section.component.less
+++ b/projects/portal/src/app/portal/components/articles-section/articles-section.component.less
@@ -3,7 +3,7 @@
 @control-color: #e0e0e0;
 @control-color-disabled: #eeeeee;
 @control-color-hover: #bdbdbd;
-@advert-height: 185px;
+@article-height: 185px;
 
 .caption-and-controls {
   display: flex;
@@ -52,12 +52,5 @@
         color: @control-color;
       }
     }
-  }
-}
-
-.advert-container {
-  z-index: 1;
-  &:hover {
-    z-index: 2;
   }
 }
