--- a/projects/portal/src/styles/content.less
+++ b/projects/portal/src/styles/content.less
@@ -1,8 +1,11 @@
 p {
+  font-family: 'Open Sans', serif;
+  font-size: 16px;
   text-align: justify;
 }
 
 figure {
+  border: 5px solid #fafafa;
   &.image {
     img {
       width: 100% !important;
@@ -19,9 +22,10 @@ figure {
 
 figcaption {
   padding: 10px;
-  font-size: 11px;
+  font-family: 'Open Sans', serif;
+  font-size: 12px;
   line-height: 15px;
   text-align: center;
   color: #757575;
-  background: #eeeeee;
+  background: #fafafa;
 }
