--- a/projects/portal/src/styles/sections.less
+++ b/projects/portal/src/styles/sections.less
@@ -16,6 +16,10 @@
     height: 30px;
   }
 
+  a {
+    color: #004f8c !important;
+  }
+
   .attribute {
     height: 30px;
     font-family: 'Comfortaa', cursive;
