--- a/projects/portal/src/app/adverts/components/advert-details/advert-details.component.less
+++ b/projects/portal/src/app/adverts/components/advert-details/advert-details.component.less
@@ -1,10 +1,15 @@
 @advert-height: 300px;
 @advert-margin-bottom: 15px;
 
+.advert-details-component {
+  background: white;
+  border-radius: 12px;
+}
+
 .section-link {
   display: block;
   margin-bottom: 15px;
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Open Sans', serif;
   font-size: 15px;
   font-weight: 300;
   color: #27699D;
@@ -13,9 +18,9 @@
 }
 
 .article-caption {
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Open Sans', serif;
   font-size: 30px;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 30px;
   color: #27699D;
 }
@@ -27,9 +32,9 @@
   align-items: center;
 
   .attribute {
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Open Sans', serif;
     font-size: 13px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 35px;
     text-transform: uppercase;
     color: #9e9e9e;
