--- a/projects/portal/src/app/portal/components/portal/portal.component.less
+++ b/projects/portal/src/app/portal/components/portal/portal.component.less
@@ -1,4 +1,4 @@
-@app-header-height: 200px;
+@app-header-height: 150px;
 @app-header-border-bottom: 5px solid #eeeeee;
 @app-content-margin-top: -50px;
 @app-content-margin-bottom: 100px;
@@ -33,12 +33,12 @@ header {
 
   .gradient {
     width: 100%;
-    height: 30%;
+    height: 80%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 5;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0) 10%, rgba(27, 32, 48, 0.8) 115%);
+    background: linear-gradient(to top, rgba(0, 0, 0, 0) 10%, rgba(27, 32, 48, 0.7) 100%);
   }
 
   .content {
@@ -82,65 +82,10 @@ main {
 
   #application-content {
     z-index: 6;
-    margin-top: @app-content-margin-top;
+    min-height: 700px;
     margin-bottom: @app-content-margin-bottom;
-    background: white;
-    // border-top: 5px solid rgb(244,244,244);
-    // border-top-left-radius: @app-content-border-radius;
-    // border-top-right-radius: @app-content-border-radius;
+    background: transparent;
     border-radius: @app-content-border-radius;
-    box-shadow: 0 2px 16px rgba(0, 0, 0, 0.12);
-  }
-}
-
-footer {
-  overflow: hidden;
-  position: relative;
-  width: 120%;
-  height: @app-footer-height;
-  margin-left: -10%;
-  border-top: 5px solid #eeeeee;
-  //border-top-left-radius: 80%;
-  //border-top-right-radius: 80%;
-
-  .background {
-    content:"";
-    z-index: 1;
-    position: relative;
-    width:150%;
-    height:100%;
-    // position:absolute;
-    // top:0;
-    // left:0;
-    -webkit-backface-visibility: hidden;
-    -webkit-transform: translateZ(0) scale(1.0, 1.0);
-    transform: translateZ(0);
-    background:#1B2030 url("/assets/header-bg-1.jpg") center no-repeat;
-    background-size:cover;
-    background-attachment:fixed;
-    animation: grow 30s linear 10ms infinite;
-    transition:all 0.2s ease-in-out;
-    z-index: -2;
-  }
-
-  .gradient {
-    //content:"";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 5;
-    background: linear-gradient(to bottom, rgba(27,32,48,0.4) 70%, rgba(0,0,0,0.1) 100%);
-
-    .header-content {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: flex-start;
-      padding-top: 30px;
-      //width: 70%;
-      //margin-left: 15%;
-    }
+    box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
   }
 }
