--- a/projects/portal/src/styles/search-bar.less
+++ b/projects/portal/src/styles/search-bar.less
@@ -6,6 +6,10 @@
   height: 45px;
   margin-bottom: 10px;
 
+  &:has(input:focus) {
+    background: red;
+  }
+
   .prefix {
     width: 50px;
     height: 45px;
@@ -41,6 +45,10 @@
     border: none;
     outline: none;
     background: #F7F7F7;
+
+    &:focus {
+      //background: #fafafa;
+    }
 
     &:last-child {
       border-top-right-radius: 12px;
@@ -84,6 +92,32 @@
     }
     input[type='text'] {
       background: #f5f5f5;
+    }
+  }
+
+  &.rounded {
+    .prefix {
+      border-top-left-radius: 36px;
+      border-bottom-left-radius: 36px;
+
+      .mat-icon {
+        border-top-left-radius: 36px;
+        border-bottom-left-radius: 36px;
+      }
+    }
+
+    input[type='text'] {
+      &:last-child {
+        border-top-right-radius: 36px;
+        border-bottom-right-radius: 36px;
+      }
+    }
+
+    .postfix {
+      &:last-child {
+        border-top-right-radius: 36px;
+        border-bottom-right-radius: 36px;
+      }
     }
   }
 }
