PORTAL: Minor bugfixes and improvements

--- a/projects/kolenergo-core/src/lib/ui/components/slider/components/slider/slider.component.html
+++ b/projects/kolenergo-core/src/lib/ui/components/slider/components/slider/slider.component.html
@@ -14,7 +14,7 @@
   <!-- End: Слайды -->
 
   <!-- Start: Элементы управления -->
-  <div class="slider-controls">
+  <div class="slider-controls" *ngIf="showControls">
     <div class="control"
          *ngFor="let slide of slides"
          [ngClass]="{'active': slide.isActive}"
