--- a/projects/portal/src/app/portal/components/advert/advert.component.less
+++ b/projects/portal/src/app/portal/components/advert/advert.component.less
@@ -16,8 +16,10 @@
   cursor: pointer;
   transition: all linear 0.1s;
 
-  &:hover {
-    transform: scale(1.1);
+  &.zoom-on-hover {
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &.no-image {
