--- a/projects/portal/src/app/portal/components/adverts-section/adverts-section.component.less
+++ b/projects/portal/src/app/portal/components/adverts-section/adverts-section.component.less
@@ -61,3 +61,15 @@
     z-index: 2;
   }
 }
+
+.no-adverts-placeholder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: @advert-height;
+  font-family: 'Open Sans', serif;
+  font-size: 17px;
+  font-weight: 300;
+  color: #b0bec5;
+}
