--- a/projects/portal/src/app/adverts/components/advert-details/advert-details.component.html
+++ b/projects/portal/src/app/adverts/components/advert-details/advert-details.component.html
@@ -77,7 +77,7 @@
                 <div class="col-12">
                   <div class="row">
                     <div class="col-12 col-md-4 col-xl-12 d-flex flex-column flex-md-row flex-xl-column" *ngFor="let similar of selectedAdvert?.similar">
-                      <app-advert [advert]="similar"></app-advert>
+                      <app-advert [advert]="similar" [zoomOnHover]="false"></app-advert>
                       <!--
                       <a class="advert"
                          [ngClass]="{'no-image': !similar.image}"
