--- a/projects/operative-situation/src/styles.less
+++ b/projects/operative-situation/src/styles.less
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../../kolenergo-core/src/lib/ui/styles';
+@import './styles/sidebar';
+
+html, body { height: 100%;}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
