OSR: Operative situation module and state added

--- a/projects/operative-situation/src/styles.less
+++ b/projects/operative-situation/src/styles.less
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../../../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../../kolenergo-core/src/lib/ui/styles';
+@import './styles/sign-in-dialog';
+@import './styles/sign-in-backdrop';
 @import './styles/sidebar';
 
 html, body { height: 100%;}
