--- a/projects/operative-situation/src/styles/sidebar.less
+++ b/projects/operative-situation/src/styles/sidebar.less
@@ -1,5 +1,5 @@
-@sidebar-width: 270px;
-@sidebar-background-color: white;
+@sidebar-width: 330px;
+@sidebar-background-color: #fafafa;
 @content-background-color: #eeeeee;
 
 .application-sidebar {
