OSR2: Form with steps added

--- a/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.html
@@ -7,7 +7,7 @@
       {{period.time}}
     </div>
     <div class="period">
-      <mat-icon fontSet="material-icons-outlined">offline_bolt</mat-icon>
+      <i class="fa fa-bolt"></i>
     </div>
   </div>
   <div class="report">
