--- a/projects/operative-situation/src/app/features/operative-situation/components/form-with-steps/form-with-steps.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/form-with-steps/form-with-steps.component.less
@@ -1,4 +1,4 @@
-@form-with-steps-controls-width: 280px;
+@form-with-steps-controls-width: 285px;
 @form-with-steps-control-panel-padding-top: 20px;
 @form-with-steps-control-panel-padding-left: 30px;
 @form-with-steps-control-panel-padding-bottom: 20px;
@@ -13,12 +13,13 @@
 @form-with-steps-control-panel-steps-step-padding: 15px;
 @form-with-steps-control-panel-steps-step-background-color: #f5f5f5;
 @form-with-steps-control-panel-steps-step-background-color-active: #fafafa;
+@form-with-steps-control-panel-steps-step-border-color: #e0e0e0;
 @form-with-steps-control-panel-steps-step-border-radius: 2.5px;
 @form-with-steps-control-panel-steps-step-icon-font-size: 25px;
 @form-with-steps-control-panel-steps-step-icon-font-color: @form-with-steps-control-panel-steps-step-caption-color;
 @form-with-steps-control-panel-steps-step-icon-font-color-active: #607d8b;
 @form-with-steps-control-panel-steps-step-caption-font-family: 'Open Sans Regular';
-@form-with-steps-control-panel-steps-step-caption-font-size: 16px;
+@form-with-steps-control-panel-steps-step-caption-font-size: 15px;
 @form-with-steps-control-panel-steps-step-caption-line-height: 16px;
 @form-with-steps-control-panel-steps-step-caption-color: #90a4ae;
 @form-with-steps-control-panel-steps-step-caption-color-selected: #546e7a;
@@ -34,7 +35,7 @@
 .form-with-steps {
   display: flex;
   flex-direction: row;
-  height: 500px;
+  height: 550px;
   border: 1px solid lightgray;
 
   .form-control-panel {
@@ -46,6 +47,7 @@
     padding-left: @form-with-steps-control-panel-padding-left;
     padding-bottom: @form-with-steps-control-panel-padding-bottom;
     background: @form-with-steps-control-panel-background-color;
+    border-right: 1px solid @form-with-steps-control-panel-steps-step-border-color;
 
     .caption-and-steps {
       display: flex;
@@ -62,16 +64,21 @@
       .steps {
         display: flex;
         flex-direction: column;
+        margin-right: -1px;
 
         .step {
           display: flex;
           flex-direction: row;
-          margin-bottom: 8px;
+          margin-bottom: 5px;
           height: @form-with-steps-control-panel-steps-step-height;
           padding: @form-with-steps-control-panel-steps-step-padding;
           background: @form-with-steps-control-panel-steps-step-background-color;
           border-top-left-radius: @form-with-steps-control-panel-steps-step-border-radius;
           border-bottom-left-radius: @form-with-steps-control-panel-steps-step-border-radius;
+          border-top: 1px solid @form-with-steps-control-panel-steps-step-border-color;
+          border-left: 1px solid @form-with-steps-control-panel-steps-step-border-color;
+          border-bottom: 1px solid @form-with-steps-control-panel-steps-step-border-color;
+          border-right: 1px solid @form-with-steps-control-panel-steps-step-border-color;
           cursor: pointer;
 
           &:last-of-type {
@@ -80,6 +87,8 @@
 
           &.active {
             background: @form-with-steps-control-panel-steps-step-background-color-active;
+            border-right: 1px solid @form-with-steps-content-background-color;
+
             .icon-and-status {
               .fa {
                 color: @form-with-steps-control-panel-steps-step-icon-font-color-active;
@@ -111,10 +120,10 @@
 
               &.status {
                 position: absolute;
-                top: 0px;
-                right: -3px;
+                top: -3px;
+                right: -5px;
                 width: 10px;
-                height: 10px;
+                // height: 10px;
                 box-sizing: content-box;
                 font-size: 12px;
                 background-color: white;
@@ -139,7 +148,7 @@
             align-items: flex-start;
 
             .caption {
-              margin-bottom: 2px;
+              margin-bottom: 4px;
               font-family: @form-with-steps-control-panel-steps-step-caption-font-family;
               font-size: @form-with-steps-control-panel-steps-step-caption-font-size;
               line-height: @form-with-steps-control-panel-steps-step-caption-line-height;
