--- a/projects/operative-situation/src/styles.less
+++ b/projects/operative-situation/src/styles.less
@@ -5,6 +5,7 @@
 @import './styles/sign-in-dialog';
 @import './styles/sign-in-backdrop';
 @import './styles/sidebar';
+@import './styles/reports';
 
 html, body { height: 100%;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
