OSR2: Multiple changes

--- a/projects/operative-situation/src/app/features/operative-situation/components/form-with-steps/form-with-steps.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/form-with-steps/form-with-steps.component.less
@@ -176,6 +176,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     display: flex;
+    flex-direction: column;
     flex: 1;
     padding: @form-with-steps-content-padding;
     background: @form-with-steps-content-background-color;
