--- a/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.html
@@ -66,8 +66,8 @@
 
       <div class="row">
         <div class="col-12 pt-5">
-          <!--<app-reports-time-table></app-reports-time-table>-->
-          <app-report-add-dialog></app-report-add-dialog>
+          <app-reports-time-table></app-reports-time-table>
+          <!-- <app-report-add-dialog></app-report-add-dialog>-->
         </div>
       </div>
     </div>
