--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
@@ -130,3 +130,14 @@
   }
 }
 
+
+.no-report-placeholder {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Open Sans light';
+  font-size: 18px;
+  color: #90a4ae;
+}
