--- a/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.html
@@ -2,7 +2,7 @@
   <div class="periods-and-consumption">
     <div class="period"
          *ngFor="let period of periods$ | async"
-         [ngClass]="{'selected': (selectedPeriod$ | async) === period}"
+         [ngClass]="{'selected': (selectedPeriod$ | async)?.time === period.time}"
          (click)="selectPeriod(period)">
       {{period.time}}
     </div>
